--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/launch.js",
+    "start": "NODE_ENV=development node src/launch.js",
     "start:stage": "NODE_ENV=stage node src/launch.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
