feat: add <RepoList /> draft and <Router />

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
       "@@components/*": [
         "src/universal/components/*"
       ],
+      "@@modules/*": [
+        "src/universal/modules/*"
+      ],
       "@@src/*": [
         "src/*"
       ],
