--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-polyfill": "^6.26.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "styled-components": "^4.2.0"
   }
 }
